--- a/OpenEMPIRE/config/run.yaml
+++ b/OpenEMPIRE/config/run.yaml
@@ -3,14 +3,14 @@
 
 use_temporary_directory: True       # Specifies whether to use a temporary directory for operations
 temporary_directory: './'           # Path to the temporary directory used for certain operations
-forecast_horizon_year: 2060         # Target or end year for the run
-number_of_scenarios: 5              # Number of scenarios in every investment period
+forecast_horizon_year: 2050         # Target or end year for the run
+number_of_scenarios: 200              # Number of scenarios in every investment period
 length_of_regular_season: 168       # Number of hours in a regular season
 discount_rate: 0.05                 # Rate used to discount future cash flows to present value
 wacc: 0.05                          # Weighted average cost of capital
 optimization_solver: "Gurobi"       # Mathematical solver used for optimization tasks
-use_scenario_generation: False      # Indicates if scenarios should be generated dynamically
-use_fixed_sample: True              # Specifies if fixed scenario samples should be used
+use_scenario_generation: True      # Indicates if scenarios should be generated dynamically
+use_fixed_sample: False              # Specifies if fixed scenario samples should be used
 load_change_module: False           #
 filter_make : False                 #
 filter_use : False                  #
@@ -22,6 +22,6 @@ compute_operational_duals: True     # Resolve empire with fixed investment varia
 print_in_iamc_format: False         # Output should be printed in a IAMC-compatible format
 write_in_lp_format: False           # Problem should be written in Linear Programming format
 serialize_instance: False           # Serialize the data structure or model for later use
-north_sea: True                     # Whether the north sea is modelled or not
-leap_years_investment: 5            # Number of years per period
-time_format: "%d/%m/%Y %H:%M"       # Time format for scenario data files
+north_sea: False                     # Whether the north sea is modelled or not
+leap_years_investment: 10            # Number of years per period
+time_format: "%Y-%m-%d %H:%M:%S"         # Time format for scenario data files
