--- a/OpenEMPIRE/config/aggrun.yaml
+++ b/OpenEMPIRE/config/aggrun.yaml
@@ -16,8 +16,10 @@ filter_make : False                                    #
 filter_use : False                                     #
 n_cluster : 10                                         #
 moment_matching : False                                #
-copula_make: True                                      # Make empirical (true) copulas for copula-based scenario generation
-copula_use: True                                       # Copula-based scenario generation
+copula_make: False                                     # Make empirical (true) copulas for copula-based scenario generation
+copula_use: False                                      # Copula-based scenario generation (sampling approach)
+copula_clusters_make: False                            # Make copule clusters
+copula_clusters_use: True                              # Copula-based scenario generation (strata/filter approach)
 copulas_to_use: ["electricload"]                       # Copulas to be used and/or made for sampling comparison; ["electricload", "hydroror", "hydroseasonal", "solar", "windoffshore", "windonshore"]
 n_tree_compare : 20                                    # Number of trees to compare for moment matching and copula-sampling
 use_emission_cap: True                                 # Indicates if there's a cap on CO2 emissions
